2004-04-12 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): fixed bug #898889,
	cast result of a literal complement too
	* src/mcs51/ralloc.c (packRegsForAssign): fixed bug #930931,
	fixed check for bitfields

2004-04-11 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (geniCodeLogic): made it static,
	(geniCodeLogicAndOr): added in order to fix bug #905492,
	(ast2iCode): fixed bug #905492
	* support/regression/tests/bug-905492.c: added
	* src/SDCCast.c (decorateType): don't decorate/process parms twice,
	(processParms): fixed bug #927659: don't copy parms, this will clear
	decorated flag
	* support/regression/tests/bug-927659.c: added

2004-03-29 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (addCast): don't cast float to char
	* device/lib/libsdcc.lib: added _memmove

2004-03-28 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/large/Makefile: fixed parallel execution by
	replacing `make` by `$(MAKE)`

2004-03-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPointerGetSetOfs): correctly handle 1 byte array
	offsets (fixes bug #923936)

2004-03-26 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/small/Makefile: fixed parallel execution by
	replacing `make` by `$(MAKE)`

2004-03-23 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/vprintf.c (vsprintf): minor optimization, see bug #801101

2004-03-23  Scott Dattalo  <scott AT dattalo.com>

	* src/pic/gen.c (genCpl): multi-byte complements were not working.
	* src/regression/Makefile: Regression test was not running.

2004-03-23 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (resultTypePropagate, decorateType): avoid promotion to int for
	complement if possible
	* src/SDCCval.c (valComplement),
	* src/SDCCicode.c (operandOperation): fixed complement of literal
	* support/regression/tests/onebyte.c (testComplement): added

2004-03-22 Bernhard Held <bernhard AT bernhardheld.de>
